--- a/sass/_tables-results.scss
+++ b/sass/_tables-results.scss
@@ -284,7 +284,7 @@ $sorter-width: 11em;
     }
 
     li {
-      @include custom-list-bullet;
+      //@include custom-list-bullet;
       list-style-type: none;
       margin-left: 0;
     }
